fun/hello_world/inc/fog.h

typedef int16_t s16;
typedef uint8_t u8;
typedef uint16_t u16;
typedef uint32_t u32;
typedef float f32;
typedef f32 real;  // Type used in vectors.
struct Vec2 {
    union {
        struct {
            real x, y;
        };
        real _[2];
    };
#ifdef __cplusplus
    Vec2 operator-() const { return {-x, -y}; }

    Vec2 operator+(Vec2 other) const { return {other.x + x, y + other.y}; }

    Vec2 operator-(Vec2 other) const { return {x - other.x, y - other.y}; }

    Vec2 operator*(real scaler) const { return {x * scaler, y * scaler}; }

    Vec2 operator/(real scaler) const {
        real divisor = 1.0f / scaler;
        return {x * divisor, y * divisor};
    }

    void operator+=(Vec2 other) {
        x += other.x;
        y += other.y;
    }

    void operator-=(Vec2 other) {
        x -= other.x;
        y -= other.y;
    }

    void operator*=(real scaler) { *this = (*this) * scaler; }

    void operator/=(real scaler) { *this = (*this) / scaler; }

    bool operator==(Vec2 other) {
        return (x - other.x) * (x - other.x) < FLOAT_EQ_MARGIN &&
               (y - other.y) * (y - other.y) < FLOAT_EQ_MARGIN;
    }
#endif
};
typedef u32 Layer;
typedef u32 ShapeID;
struct Body {
    ShapeID shape;
    Layer layer;

    Vec2 offset;

    // This is just for static rotation. So the
    // bodies can be oriented. No rotational forces
    // are applied.
    f32 rotation;
    Vec2 position;
    Vec2 scale;

    Vec2 velocity;
    Vec2 acceleration;
    Vec2 force;

    f32 inverse_mass;
    f32 damping;
    f32 bounce;
};
struct Overlap {
    Body *a, *b;
    f32 depth;
    Vec2 normal; // Allways points towards a.
    bool is_valid;

#ifdef FOG_ENGINE
    operator bool() const { return is_valid; }
#endif
};
enum At {
    PRE_UPDATE,
    POST_UPDATE,
    PRE_DRAW,
    POST_DRAW,

    COUNT,
};
struct LogicID {
    At at;
    s16 slot;
    u8 gen;

#ifdef __cplusplus
    bool operator==(LogicID &other) const {
        return at == other.at
            && gen == other.gen
            && slot == other.slot;
    }
#endif
};
struct Span {
    // TODO(ed): Maybe add different kinds of randomizations.
    f32 min, max;

#ifdef FOG_ENGINE
    f32 random() {
        return random_real(min, max);
    }
#endif
};
enum Player {
    NONE = 0b0000,

    P1 = 0b0001,
    P2 = 0b0010,
    P3 = 0b0100,
    P4 = 0b1000,

    // Max number of players.
    NUM = 4,

    ANY = 0b1111,
};
struct AudioID {
    u8 gen;
    u16 slot;
};
///* Camera struct
// The camera struct is how a camera is controlled. This struct can
// give you fine grain camera control.
struct Camera {
    Vec2 position;
    Vec2 offset;
    f32 zoom;
    f32 aspect_ratio; // height / width
    f32 _padding_[2];
};
struct Window {
    f32 width;
    f32 height;
    f32 aspect_ratio;
    f32 _padding_;
};