game/rutic/src/fog.rs

#[test]
fn bindgen_test_layout_Body() {
    assert_eq!(
        ::std::mem::size_of::<Body>(),
        72usize,
        concat!("Size of: ", stringify!(Body))
    );
    assert_eq!(
        ::std::mem::align_of::<Body>(),
        4usize,
        concat!("Alignment of ", stringify!(Body))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<Body>())).shape as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Body),
            "::",
            stringify!(shape)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<Body>())).layer as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(Body),
            "::",
            stringify!(layer)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<Body>())).offset as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(Body),
            "::",
            stringify!(offset)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<Body>())).rotation as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(Body),
            "::",
            stringify!(rotation)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<Body>())).position as *const _ as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(Body),
            "::",
            stringify!(position)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<Body>())).scale as *const _ as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(Body),
            "::",
            stringify!(scale)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<Body>())).velocity as *const _ as usize },
        36usize,
        concat!(
            "Offset of field: ",
            stringify!(Body),
            "::",
            stringify!(velocity)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<Body>())).acceleration as *const _ as usize },
        44usize,
        concat!(
            "Offset of field: ",
            stringify!(Body),
            "::",
            stringify!(acceleration)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<Body>())).force as *const _ as usize },
        52usize,
        concat!(
            "Offset of field: ",
            stringify!(Body),
            "::",
            stringify!(force)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<Body>())).inverse_mass as *const _ as usize },
        60usize,
        concat!(
            "Offset of field: ",
            stringify!(Body),
            "::",
            stringify!(inverse_mass)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<Body>())).damping as *const _ as usize },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(Body),
            "::",
            stringify!(damping)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<Body>())).bounce as *const _ as usize },
        68usize,
        concat!(
            "Offset of field: ",
            stringify!(Body),
            "::",
            stringify!(bounce)
        )
    );
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct Overlap {
    pub a: *mut Body,
    pub b: *mut Body,
    pub depth: f32,
    pub normal: Vec2,
    pub is_valid: b8,
}
#[test]
fn bindgen_test_layout_Overlap() {
    assert_eq!(
        ::std::mem::size_of::<Overlap>(),
        32usize,
        concat!("Size of: ", stringify!(Overlap))
    );
    assert_eq!(
        ::std::mem::align_of::<Overlap>(),
        8usize,
        concat!("Alignment of ", stringify!(Overlap))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<Overlap>())).a as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Overlap),
            "::",
            stringify!(a)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<Overlap>())).b as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(Overlap),
            "::",
            stringify!(b)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<Overlap>())).depth as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(Overlap),
            "::",
            stringify!(depth)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<Overlap>())).normal as *const _ as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(Overlap),
            "::",
            stringify!(normal)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<Overlap>())).is_valid as *const _ as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(Overlap),
            "::",
            stringify!(is_valid)
        )
    );
}
pub const At_PRE_UPDATE: At = 0;
pub const At_POST_UPDATE: At = 1;
pub const At_PRE_DRAW: At = 2;
pub const At_POST_DRAW: At = 3;
pub const At_COUNT: At = 4;
pub type At = u32;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LogicID {
    pub at: At,
    pub slot: s16,
    pub gen: u8,
}
#[test]
fn bindgen_test_layout_LogicID() {
    assert_eq!(
        ::std::mem::size_of::<LogicID>(),
        8usize,
        concat!("Size of: ", stringify!(LogicID))
    );
    assert_eq!(
        ::std::mem::align_of::<LogicID>(),
        4usize,
        concat!("Alignment of ", stringify!(LogicID))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<LogicID>())).at as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(LogicID),
            "::",
            stringify!(at)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<LogicID>())).slot as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(LogicID),
            "::",
            stringify!(slot)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<LogicID>())).gen as *const _ as usize },
        6usize,
        concat!(
            "Offset of field: ",
            stringify!(LogicID),
            "::",
            stringify!(gen)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Span {
    pub min: f32,
    pub max: f32,
}
#[test]
fn bindgen_test_layout_Span() {
    assert_eq!(
        ::std::mem::size_of::<Span>(),
        8usize,
        concat!("Size of: ", stringify!(Span))
    );
    assert_eq!(
        ::std::mem::align_of::<Span>(),
        4usize,
        concat!("Alignment of ", stringify!(Span))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<Span>())).min as *const _ as usize },
        0usize,
        concat!("Offset of field: ", stringify!(Span), "::", stringify!(min))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<Span>())).max as *const _ as usize },
        4usize,
        concat!("Offset of field: ", stringify!(Span), "::", stringify!(max))
    );
}
pub const Player_NONE: Player = 0;
pub const Player_P1: Player = 1;
pub const Player_P2: Player = 2;
pub const Player_P3: Player = 4;
pub const Player_P4: Player = 8;
pub const Player_NUM: Player = 4;
pub const Player_ANY: Player = 15;
pub type Player = u32;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AudioID {
    pub gen: u8,
    pub slot: u16,
}
#[test]
fn bindgen_test_layout_AudioID() {
    assert_eq!(
        ::std::mem::size_of::<AudioID>(),
        4usize,
        concat!("Size of: ", stringify!(AudioID))
    );
    assert_eq!(
        ::std::mem::align_of::<AudioID>(),
        2usize,
        concat!("Alignment of ", stringify!(AudioID))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<AudioID>())).gen as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(AudioID),
            "::",
            stringify!(gen)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<AudioID>())).slot as *const _ as usize },
        2usize,
        concat!(
            "Offset of field: ",
            stringify!(AudioID),
            "::",
            stringify!(slot)
        )
    );
}
#[doc = "* Camera struct"]
#[repr(C)]
#[derive(Copy, Clone)]
pub struct Camera {
    pub position: Vec2,
    pub offset: Vec2,
    pub zoom: f32,
    pub aspect_ratio: f32,
    pub _padding_: [f32; 2usize],
}
#[test]
fn bindgen_test_layout_Camera() {
    assert_eq!(
        ::std::mem::size_of::<Camera>(),
        32usize,
        concat!("Size of: ", stringify!(Camera))
    );
    assert_eq!(
        ::std::mem::align_of::<Camera>(),
        4usize,
        concat!("Alignment of ", stringify!(Camera))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<Camera>())).position as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Camera),
            "::",
            stringify!(position)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<Camera>())).offset as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(Camera),
            "::",
            stringify!(offset)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<Camera>())).zoom as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(Camera),
            "::",
            stringify!(zoom)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<Camera>())).aspect_ratio as *const _ as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(Camera),
            "::",
            stringify!(aspect_ratio)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<Camera>()))._padding_ as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(Camera),
            "::",
            stringify!(_padding_)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Window {
    pub width: f32,
    pub height: f32,
    pub aspect_ratio: f32,
    pub _padding_: f32,
}
#[test]
fn bindgen_test_layout_Window() {
    assert_eq!(
        ::std::mem::size_of::<Window>(),
        16usize,
        concat!("Size of: ", stringify!(Window))
    );
    assert_eq!(
        ::std::mem::align_of::<Window>(),
        4usize,
        concat!("Alignment of ", stringify!(Window))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<Window>())).width as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Window),
            "::",
            stringify!(width)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<Window>())).height as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(Window),
            "::",
            stringify!(height)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<Window>())).aspect_ratio as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(Window),
            "::",
            stringify!(aspect_ratio)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<Window>()))._padding_ as *const _ as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(Window),
            "::",
            stringify!(_padding_)
        )
    );
}
